Prevent media title from overflowing

--- a/src/scripts/modules/media/title/title.less
+++ b/src/scripts/modules/media/title/title.less
@@ -7,6 +7,7 @@
 
   > h1 {
     display: inline-block;
+    max-width: 67%;
   }
 
   > .info {
